fix "contents" button width on mobile

--- a/src/styles/partials/prev-next-nav.scss
+++ b/src/styles/partials/prev-next-nav.scss
@@ -6,7 +6,7 @@
 
     .Navigation__button {
         @include breakpoint(xs) {
-            width: 90px;
+            width: initial;
         }
     }
 
